# seccell-sel4-playground

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  config.cmake  init-build.sh  settings.cmake  step-into-kernel.gdb
include/: bench.h  cache.h  cache_wrapper.h  config.h  debug.h  eval.h  firewall.h  hash.h  jenkins_hash.h  loader.h  mbedtls_fake.h  mmap_override.h  nat.h  sc_mmap.h  slabs.h
src/: alloc.c  cache.c  cache_wrapper.c  client.c  firewall.c  main.c  mmap_override.c  nat.c  sc_mmap.c  scthreads.c  slabs.c
